<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="Setting">Настройки</string>
    <string name="Mediateka">Медиатека</string>
    <string name="share">Поделиться приложением</string>
    <string name="dark">Темная тема</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="back">Назад</string>
    <string name="agreement_link">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="support_mail">ya.tarannov@ya.ru</string>
    <string name="support_mail_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_massage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_link">https://practicum.yandex.ru/</string>
    <string name="image_album">image_album</string>
    <string name="search_update">Обновить</string>
    <string name="Error">Ошибка</string>
    <string name="nothing_was_found">"Ничего не нашлось"</string>
    <string name="communication_problems">"Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету"</string>
    <string name="You_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="excerpt_duration" />
    <string name="like">Кнопка в избранное</string>
    <string name="play">Воспроизведение</string>
    <string name="add">Добавление</string>
    <string name="holder">заглушка</string>
    <string name="time_null">00:00</string>
    <string name="mediateca_empty">Ваша медиатека пуста</string>
    <string name="playlist_empty">Вы не создали\n ни одного плейлиста</string>
    <string name="playlist_new">Нoвый плейлист</string>
    <string name="like_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name_playlist">Название*</string>
    <string name="description">Описание</string>
    <string name="Create">Создать</string>
    <string name="add_playlist">Добавить в плейлист</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="added_playlist">Добавлено в плейлист</string>
    <string name="track_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="tracks">Треков</string>
    <string name="creat_playlist">Плейлист создан</string>
    <string name="ignore">ignore</string>
    <string name="share_bottom_sheet">Поделиться</string>
    <string name="edit_playliist">Редaктировать информацию</string>
    <string name="del_playlist">Удaлить плейлист</string>
    <string name="name_of_playlist">Name of playlist</string>
    <string name="descript">Descript</string>
    <string name="_00">00 минут</string>
    <string name="_198_tracks">198 трэков</string>
    <string name="not_track">В этом плейлисте нет треков</string>
    <plurals name="track_amount">
        <item quantity="zero"> треков</item>
        <item quantity="one"> трек</item>
        <item quantity="two"> трека</item>
        <item quantity="few"> трека</item>
        <item quantity="many"> треков</item>
        <item quantity="other"> треков</item>
    </plurals>
    <plurals name="time_amount">
        <item quantity="zero"> минут</item>
        <item quantity="one"> минута</item>
        <item quantity="two"> минуты</item>
        <item quantity="few"> минуты</item>
        <item quantity="many"> минут</item>
        <item quantity="other"> минут</item>
    </plurals>
</resources>