<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_14"
        android:layout_marginBottom="@dimen/marginBottom_40"
        android:text="@string/playlist_maker"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorSecondary"
        android:textSize="@dimen/medium_font_size"
        android:textFontWeight="500"
        tools:targetApi="p" />

    <Button
        android:id="@+id/button_search"
        style="@style/ButtonMainActivity"
        android:text="@string/search"
        app:icon="@drawable/ic_search_lightmode" />

    <Button
        android:id="@+id/button_mediateca"
        style="@style/ButtonMainActivity"
        android:text="@string/Mediateka"
        app:icon="@drawable/ic_mediateca_light_mode" />

    <Button
        android:id="@+id/button_settings"
        style="@style/ButtonMainActivity"
        android:layout_marginBottom="28dp"
        android:text="@string/Setting"
        app:icon="@drawable/ic_settings_light_mode" />

</LinearLayout>