<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbars"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/Setting" />

    <Switch
        android:id="@+id/switch_darck"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_regular"
        android:paddingStart="@dimen/margin_16"
        android:text="@string/dark"
        android:textAllCaps="false"
        android:textSize="@dimen/regular_font_size"
        tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_21"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_21"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_font_size" />

        <ImageView
            android:id="@+id/buttom_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginTop="@dimen/margin_19"
            android:layout_marginEnd="@dimen/margin_12"
            android:layout_marginBottom="@dimen/margin_18"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share"
            app:tint="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_21"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_21"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_font_size" />

        <ImageView
            android:id="@+id/buttom_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginTop="@dimen/margin_19"
            android:layout_marginEnd="@dimen/margin_12"
            android:layout_marginBottom="@dimen/margin_18"
            android:contentDescription="@string/support"
            android:src="@drawable/ic_help"
            app:tint="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_21"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_21"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_font_size" />

        <ImageView
            android:id="@+id/buttom_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginTop="@dimen/margin_19"
            android:layout_marginEnd="@dimen/margin_12"
            android:layout_marginBottom="@dimen/margin_18"
            android:contentDescription="@string/agreement"
            android:src="@drawable/ic_arrow"
            app:tint="@color/gray" />
    </LinearLayout>


</LinearLayout>