<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.PlayerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/player_toolbars"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09203143" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47025815" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/text_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/text_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.976" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/holder"
        android:src="@drawable/ic_toast"
        app:layout_constraintBottom_toBottomOf="@id/image_bottom_guideline"
        app:layout_constraintDimensionRatio="w, 1:1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/player_toolbars" />

    <TextView
        android:id="@+id/track_name"
        style="@style/TextStylePlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/artist_name"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/image_bottom_guideline"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/artist_name"
        style="@style/TextStylePlayer"
        android:textSize="14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        tools:text="The Beatles" />

    <ImageButton
        android:id="@+id/add_button"
        style="@style/TextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_add_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/play_button"
        android:contentDescription="@string/add" />


    <ImageButton
        android:id="@+id/play_button"
        style="@style/TextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_play_button"
        app:circularflow_viewCenter="@id/add_button"
        app:layout_constraintBottom_toBottomOf="@id/excerpt_duration"
        app:layout_constraintEnd_toStartOf="@id/like_button"
        app:layout_constraintStart_toEndOf="@id/add_button"
        app:layout_constraintTop_toTopOf="@id/artist_name"
        android:contentDescription="@string/play" />

    <ImageButton
        android:id="@+id/like_button"
        style="@style/TextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_like"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/play_button"
        app:layout_constraintTop_toTopOf="@id/play_button"
        android:contentDescription="@string/like" />

    <TextView
        android:id="@+id/excerpt_duration"
        style="@style/TextStyleMedium14_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excerpt_duration"
        app:layout_constraintBottom_toBottomOf="@id/text_top_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/play_button" />

    <TextView
        android:id="@+id/duration"
        style="@style/TextStylePlayerSmallLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_top_guideline"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/changeable_duration"
        style="@style/TextStylePlayerSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/duration"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="5:35" />

    <TextView
        android:id="@+id/album"
        style="@style/TextStylePlayerSmallLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/album"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintEnd_toStartOf="@id/changeable_album"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
        android:id="@+id/changeable_album"
        style="@style/TextStylePlayerSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_19"
        android:layout_marginEnd="@dimen/margin_16"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/album"
        app:layout_constraintTop_toTopOf="@id/album"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/year"
        style="@style/TextStylePlayerSmallLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        android:id="@+id/changeable_year"
        style="@style/TextStylePlayerSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/year"
        tools:text="1965" />

    <TextView
        android:id="@+id/genre"
        style="@style/TextStylePlayerSmallLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/changeable_genre"
        style="@style/TextStylePlayerSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/genre"
        tools:text="Rock" />

    <TextView
        android:id="@+id/country"
        style="@style/TextStylePlayerSmallLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="@id/text_bottom_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/changeable_country"
        style="@style/TextStylePlayerSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/country"
        tools:text="Великобритания" />

</androidx.constraintlayout.widget.ConstraintLayout>