<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="@string/Setting"
    android:orientation="vertical"
    tools:context=".SearchActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbars"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/search"
        app:titleTextAppearance="@style/TextStyleToolbar" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_8"
            android:autofillHints=""
            android:background="@drawable/search_field"
            android:backgroundTint="@color/light_gray"
            android:cursorVisible="true"
            android:drawableStart="@drawable/ic_search_lightmode"
            android:drawablePadding="4dp"
            android:drawableTint="@color/gray"
            android:fontFamily="@font/ys_display_regular"
            android:foregroundGravity="center_horizontal"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="50"
            android:minHeight="36dp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/margin_14"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/regular_font_size"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/margin_16"
            android:contentDescription="@string/search"
            android:src="@drawable/clear"
            android:stateListAnimator="@null"
            android:visibility="gone"
            app:tint="@color/gray"
            tools:ignore="RtlSymmetry" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTrack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_13"
            android:layout_marginEnd="@dimen/margin_12"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="148dp"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/search_something_went_wrong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="112dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/search_error_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/Error" />

            <TextView
                android:id="@+id/search_error_text"
                style="@style/TextSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:gravity="center"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="19sp" />

            <Button
                android:id="@+id/search_update_button"
                style="@style/ButtonError"
                android:layout_gravity="center"
                android:text="@string/search_update"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/you_searched"
                style="@style/TextStyleError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/You_search"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="19sp"
                android:visibility="gone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/history_search_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_13"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="@dimen/margin_12"
                    android:layout_marginBottom="60dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <Button
                    android:id="@+id/clear_history"
                    style="@style/ButtonError"
                    android:text="@string/clear_history" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
